--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,10 +11,11 @@
     "strict": true,
     "noImplicitAny": true,
     "useUnknownInCatchVariables": false,
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
+    "jsx": "react"
   },
   "ts-node": {
-      "esm": true
+    "esm": true
   },
   "lib": ["esnext"]
 }
