Dev Commit - Client & Server
Client:

- Still in the process of refactoring folder structure. Currently finished community page.
- Fixed the auth and login forms. separated routes.
- Done refactoring calculators in the app route.

Server:

- Made separate middleware for image upload and separated controllers for routes that have image upload (eg. post upload and register)

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,10 +11,11 @@
     "strict": true,
     "noImplicitAny": true,
     "useUnknownInCatchVariables": false,
-    "inlineSourceMap": true,
-    "jsx": "react"
+    "inlineSourceMap": true
   },
   "ts-node": {
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true,
     "esm": true
   },
   "lib": ["esnext"]
