--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query": "^4.36.1",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.14",
     "axios": "^1.6.4",
+    "chart.js": "^4.4.1",
     "classnames": "^2.3.2",
     "flowbite-react": "^0.5.0",
     "formik": "^2.2.9",
